--- a/config.toml
+++ b/config.toml
@@ -10,14 +10,10 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
     post = "/:year/:month/:day/:slug/"
 
 [[menu.main]]
-    name = "About"
-    url = "/about/"
-[[menu.main]]
-    name = "GitHub"
-    url = "https://github.com/rstudio/blogdown"
-[[menu.main]]
-    name = "Twitter"
-    url = "https://twitter.com/rstudio"
+    name = "Announcement"
+    url = "/announcement/"
+
+   
 
 [params]
     description = "A website built through Hugo and blogdown."
@@ -32,10 +28,10 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
     MathJaxVersion = "2.7.5"
 
     # path to the favicon, under "static"
-    favicon = "favicon.ico"
+    favicon = "favicona.ico"
 
     [params.logo]
-    url = "logo.png"
+    url = "pt.png"
     width = 50
     height = 50
     alt = "Logo"
